...
                        children: [
                          Align(
                            alignment: AlignmentDirectional(0.0, 0.0),
                            child: Padding(
                              padding: EdgeInsets.all(6.0),
                              child: FFButtonWidget(
                                key: ValueKey('PLAY_cxtf'),
                                onPressed: () async {
                                  context.pushNamed(
                                    CategoriesPagesWidget.routeName,
                                    extra: <String, dynamic>{
                                      kTransitionInfoKey: TransitionInfo(
                                        hasTransition: true,
...
                          ),
                          Align(
                            alignment: AlignmentDirectional(0.0, 0.0),
                            child: Padding(
                              padding: EdgeInsets.all(6.0),
                              child: FFButtonWidget(
                                key: ValueKey('Setting_0gt1'),
                                onPressed: () async {
                                  context.pushNamed(
                                    SettingsWidget.routeName,
                                    extra: <String, dynamic>{
                                      kTransitionInfoKey: TransitionInfo(
                                        hasTransition: true,
...
                          ),
                          Align(
                            alignment: AlignmentDirectional(0.0, 0.0),
                            child: Padding(
                              padding: EdgeInsets.all(6.0),
                              child: FFButtonWidget(
                                key: ValueKey('INFO_n34g'),
                                onPressed: () async {
                                  context.pushNamed(
                                    InfoWidget.routeName,
                                    extra: <String, dynamic>{
                                      kTransitionInfoKey: TransitionInfo(
                                        hasTransition: true,
...
                          ),
                          Align(
                            alignment: AlignmentDirectional(0.0, 0.0),
                            child: Padding(
                              padding: EdgeInsets.all(6.0),
                              child: FFButtonWidget(
                                key: ValueKey('exitApp_6t2t'),
                                onPressed: () async {
                                  GoRouter.of(context).prepareAuthEvent();
                                  await authManager.signOut();
                                  GoRouter.of(context).clearRedirectLocation();

                                  context.goNamedAuth(
...
