...
                                    duration: Duration(milliseconds: 5),
                                  ),
                                },
                              );
                            },
                            child: Row(
                              key: ValueKey('caeser_4v5n'),
                              mainAxisSize: MainAxisSize.max,
                              children: [
                                ClipRRect(
                                  borderRadius: BorderRadius.circular(8.0),
                                  child: Image.asset(
                                    'assets/images/ChatGPT_Image_May_11,_2025,_01_13_03_PM.png',
...
